export enum PollStatus {
  UNDEFINED = 'UNDEFINED',
  REVIEW = 'REVIEW',
  DECLINED = 'DECLINED',
  APPROVED_AND_WAITING = 'APPROVED_AND_WAITING',
  ACTIVE = 'ACTIVE',
  FINISHED = 'FINISHED',
}