export enum UserRole {
    UNDEFINED = 'UNDEFINED',
    STUDENT = 'STUDENT',
    ADMIN = 'ADMIN'
}